# site

./: .build.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .releaserc.json  .travis.yml  AGENTS.md  Brewfile  Brewfile.lock.json  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  Gopkg.toml  LICENSE  Procfile  README.md  app.json  box.rb  buf.gen.yaml  buf.yaml  build.sh  conductor.json  config.dhall  containermake.lua  containermake.sh  default.nix  deps.nix  docker-bake.hcl  docker.nix  flake.nix  frontend.asar.sig  fs.go  go.mod  go.modverify  go.sum  gomod2nix.toml  gopreload.go  hash.go  (+19 more)
.claude/: git-workflow.md  go-conventions.md  javascript-conventions.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.tangled/: build-test-deploy.yaml
.tekton/: kustomization.yaml  serviceaccount.yaml  test-pipelinerun.yaml  xe-site-pipeline.yaml
app/: CHECKS
blog/: 2022-media.markdown  3d-printing-openscad-2022-03-28.markdown  7e-2020-12-20.markdown  CVE-2023-36325.markdown  GraphicalEmoji.markdown  HVE-BC1750-0001.markdown  OVE-20190623-0001.markdown  OVE-20190623-0001.md  OVE-20191021-0001.markdown  OVE-20191021-0001.md  OVE-20221017-0001.markdown  TLDR-rust-2020-09-19.markdown  a-letter-to-those-that-bullied-me-2018-06-16.markdown  a-sigil-2022-01-11.markdown  a-tool-to-aid-forgetfulness-2022-01-12.markdown  a-trip-into-freebsd-2021-02-13.markdown  a-weapon-to-surpass-metal-gear.markdown  aegis-prometheus-2021-04-05.markdown  against-toxicity-programming-languages.markdown  all-there-is-is-now-2019-05-25.markdown  anathema-2019-10-21.markdown  anbernic-win600-first-impressions.markdown  anbernic-win600-review.markdown  android-thoughts-2021-07-03.markdown  android-thoughts-2021-07-04.markdown  animal-crossing-stability-2021-02-28.markdown  anything-message-queue.markdown  apple-macbook-air-m1-review-2021-02-15.markdown  atom-as-vim-2014-11-18.markdown  atom-as-vim-2014-11-18.md  automuse.markdown  avif-help-requested.markdown  backslash-kubernetes-2021-01-03.markdown  basketball-10year.markdown  beauty-in-ugly-2018-04-23.markdown  beego-2014-11-28.markdown  best-friend-imaginary-bottle-window-cleaner-2021-09-24.markdown  big-domain-move.markdown  blind-men-and-an-elephant-2018-11-29.markdown  blind-men-and-an-elephant-2018-11-29.md  (+366 more)
config/: authors.ts  characters.ts  config.go  config.ts  config_test.go  jobHistory.ts  nagMessages.ts  resume.ts  seriesDescriptions.ts  types.ts  vods.ts
css/: gruvbox-dark.css  hack.css  no-fun-allowed.user.css  shim.css  snow.css
dhall/: Prelude.dhall  authors.dhall  characters.dhall  jobHistory.dhall  nagMessages.dhall  package.dhall  pronouns.dhall  resume.dhall  seriesDescriptions.dhall  signalboost.dhall  stories.dhall  streamVOD.dhall
docker/: ci-runtime.Dockerfile  futuresight.Dockerfile  github-sponsor-webhook.Dockerfile  patreon-saasproxy.Dockerfile  sponsor-panel.Dockerfile  xesite.Dockerfile
docs/: jsonfeed_extensions.markdown  notes.markdown  patron-page.org
examples/: http.rs  http_fail.rs  json.rs  logger_test.rs  warp.rs
frontend/: .gitignore  .psc-ide-port  LICENSE  README.md  bower.json  package.json  webpack.config.js  webpack.production.config.js
gallery/: bliss-2018-03-04.markdown  boat-2018-09-24.markdown  bokoblin-2018-11-01.markdown  cadey-alicia-ratio-2020-01-09.markdown  fairly-odd-orca-2020-06-15.markdown  lifecycle-2019-05-23.markdown  link-home-2018-09-01.markdown  link-sunset-2018-10-01.markdown  olin-logo-v1-2018-08-12.markdown  orca-2019-11-01.markdown  orca-stranding-2019-11-16.markdown
internal/: accept_encoding.go  accept_encoding_test.go  cache_headers.go  cached_token_source.go  clacks.go  date.go  domain_redirect.go  domain_redirect_test.go  headerparams.go  onion_location.go  passwdmiddleware.go  post.go  post_test.go  referer.go  slog.go
jsonfeed/: jsonfeed_test.go
k8s/: job.yml
lib/go_vanity/: Cargo.toml
lib/go_vanity/src/: build.rs  lib.rs
lib/go_vanity/templates/: gitea.rs.html  github.rs.html
lib/jsonfeed/: .gitignore  Cargo.toml  README.adoc
lib/jsonfeed/src/: builder.rs  errors.rs  feed.rs  item.rs  lib.rs
lib/mi/: Cargo.toml
lib/mi/src/: lib.rs
lib/patreon/: Cargo.toml
lib/patreon/examples/: campaign.rs
lib/patreon/src/: campaign.rs  lib.rs  pledge.rs  user.rs
lib/sdnotify/: Cargo.toml
lib/sdnotify/src/: lib.rs
lib/xesite_markdown/: Cargo.toml
lib/xesite_markdown/src/: lib.rs
lib/xesite_templates/: Cargo.toml
lib/xesite_templates/src/: lib.rs
lib/xesite_types/: Cargo.toml
lib/xesite_types/src/: lib.rs  mastodon.rs
lib/xesite_types/src/testdata/: post_attachment.json  post_hashtags.json  post_mention.json  robocadey.json
locale/: locale_en-US.ini  locale_jbo-latn-us.ini  locale_toki.ini
locales/: en.json  tp.json
lume/: .gitignore  _config.ts  deno.json  gruvbox-dark-medium.ts  tailwind.config.js
manifest/: kustomization.yaml
nix/: deps.nix  dhall-yaml.nix  rust.nix  sources.json  xesite.nix
pb/: generate.go  openapi.json  xesite.pb.go  xesite.proto  xesite.twirp.go
proto/: gen-openapi.sh  generate.go  openapi.json  proto.go
scripts/: README-check-mdx-tags.md  check-mdx-tags  check-mdx-tags.go  deploy.sh  ditherify  docker.sh  fabricate-generation  imgoptimize  nixrun.sh  nukestickercache.sh  prebake-node.mjs  rebuild.sh  recover-secret.ts  release.sh  resize  setupremote.sh  validate-blog-dates.js
src/: app.rs  build.rs  domainsocket.rs  lib.rs  main.rs  signalboost.rs
static/: geekcode.txt  gpg.pub  id_ed25519.pub  manifest.json  privacy_policy.html  robots.txt  unwrapped-2022.json
static2/: keybase.txt
talks/: asg-2023-nixos.markdown  conf42-static-analysis.markdown  how-my-website-works.markdown  irc-why-it-failed-2018-05-17.markdown  nixos-pain-2021-11-10.markdown  progressive-webapp-conversion-in-5-minutes-2019-01-28.markdown  rustconf-2022-sheer-terror-pam.markdown  surreal-horror-pam-2021-11-09.markdown  systemd-the-good-parts-2021-05-16.markdown  thinking-different-2018-11-03.markdown  unix-philosophy-logical-extreme-wasm.markdown  wasm-abi.markdown  (+3 more)
(+1261 files in other folders)
