[package]
name = "xesite"
version = "3.0.0"
authors = ["Xe Iaso <me@xeiaso.net>"]
edition = "2021"
build = "src/build.rs"
repository = "https://github.com/Xe/site"
license = "zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"
color-eyre = "0.6"
chrono = "0.4"
derive_more = "0.99"
dirs = "5"
envy = "0.4"
estimated_read_time = "1"
futures = "0.3"
glob = "0.3"
hex = "0.4"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
kankyo = "0.3"
lazy_static = "1.4"
log = "0.4"
mime = "0.3.17"
prometheus = { version = "0.13", default-features = false, features = ["process"] }
rand = "0"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_dhall = "0.12.1"
serde_yaml = "0.9"
sha2 = "0.10"
sitemap = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
xml-rs = "0.8"
url = "2"
uuid = { version = "1.4", features = ["serde", "v4"] }

# workspace dependencies
mastodon2text = { path = "./lib/mastodon2text" }
mi = { path = "./lib/mi" }
patreon = { path = "./lib/patreon" }
xe_jsonfeed = { path = "./lib/jsonfeed" }
xesite_markdown =  { path = "./lib/xesite_markdown" }
xesite_templates = { path = "./lib/xesite_templates" }
xesite_types = { path = "./lib/xesite_types" }

[dependencies.maud]
git = "https://github.com/Xe/maud"
rev = "a40596c42c7603cc4610bbeddea04c4bd8b312d9"
features = ["axum"]

[dependencies.tower]
version = "0.4"
features = [ "full" ]

[dependencies.tower-http]
version = "0.4"
features = [ "full" ]

# os-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
sdnotify = { version = "0.2", default-features = false }

[build-dependencies]
ructe = { version = "0.16", features = [ "mime03" ] }

[dev-dependencies]
pfacts = "0"
serde_json = "1"
eyre = "0.6"
pretty_env_logger = "0"

[workspace]
members = [
  "./lib/*",
]

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
