[package]
name = "go_vanity"
version = "0.2.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3"
warp = "0.3"

[build-dependencies]
ructe = { version = "0.13", features = ["warp02"] }
