[package]
authors = ["Paul Woolcock <paul@woolcock.us>", "Xe Iaso <me@xeiaso.net>"]
description = "Parser for the JSONFeed (https://jsonfeed.org) specification"
documentation = "https://docs.rs/xe_jsonfeed"
homepage = "https://github.com/Xe/site"
license = "MIT/Apache-2.0"
name = "xe_jsonfeed"
readme = "README.adoc"
version = "0.3.0"

[dependencies]
error-chain = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"

xesite_types = { path = "../xesite_types" }
