[package]
name = "mi"
version = "0.1.0"
authors = ["Xe Iaso <me@xeiaso.net>"]
edition = "2018"
license = "zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
envy = "0.4"
pretty_env_logger = "0"
