[package]
name = "patreon"
version = "0.1.0"
authors = ["Xe Iaso <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
envy = "0.4"
pretty_env_logger = "0"