[package]
name = "xesite_templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
uuid = { version = "1", features = [ "v4" ] }

xesite_types = { path = "../xesite_types" }

[dependencies.maud]
git = "https://github.com/Xe/maud"
rev = "a40596c42c7603cc4610bbeddea04c4bd8b312d9"
features = ["axum"]
