[package]
name = "xesite_types"
version = "0.1.0"
edition = "2021"
authors = ["Xe Iaso <me@xeiaso.net>"]
license = "zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
html2text = "0.6"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"